...
                { backgroundColor: AppColors.white, opacity: pressed ? 0.9 : 1 },
              ]}
            >
              <Text
                style={[styles.primaryButtonText, { color: AppColors.primary700, fontWeight: 'bold' }]}
              >
                Get Started
              </Text>
            </Pressable>

            <Pressable
              onPress={handleSignIn}
              accessibilityRole="button"
...
