appId: com.example.flutter_app
tags: ["P0", "auth", "patient"]
---
# Test: Welcome Screen → Sign In Flow (Patient)
# Priority: High
# Description: User starts at welcome screen and successfully signs in as a patient.

#get global variables
- runScript: "../../scripts/test_data.js"

# flow
- launchApp
- assertVisible: "Sign in"
- tapOn: "Sign in"
- waitForAnimationToEnd
- assertVisible: ".*Welcome Back.*"
- assertVisible: "Email Address.*"
- tapOn: "Email Address.*"
- inputText: ${output.data.RECIPIENT_EMAIL}
- assertVisible: "Password.*"
- tapOn: "Password.*"
- inputText: ${output.data.RECIPIENT_PASSWORD}
- hideKeyboard
- tapOn: "Sign In"
- waitForAnimationToEnd
- assertVisible: "Home"
- assertVisible: ".*${output.data.RECIPIENT_NAME}.*"
- assertVisible: ".*Tasks.*"