appId: com.example.flutter_app
---
# Common flow: Sign in as patient
# This flow can be reused in other tests using runFlow

#get global variables
- runScript: "../../scripts/test_data.js"

# flow
- launchApp
- tapOn: "Sign in"
- waitForAnimationToEnd
- tapOn: "Email Address.*"
- inputText: ${output.data.RECIPIENT_EMAIL}
- tapOn: "Password.*"
- inputText: ${output.data.RECIPIENT_PASSWORD}
- hideKeyboard
- tapOn: "Sign In"
- waitForAnimationToEnd
- assertVisible: "Home"
